# CTO_001

./: .env.template  .gitignore  README.md  init_db.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.ps1
api/: deps.py
api/routes/: auth.py  bots.py  market.py  trading.py
core/: config.py  db.py  errors.py  logging.py  security.py
frontend/: next.config.js  package.json  tsconfig.json
frontend/components/: BotCard.tsx  BotDetailPage.tsx  BotsPage.tsx  CandleChart.tsx  CreateBotModal.tsx  Layout.tsx  OrdersTable.tsx  SignalsTable.tsx
frontend/hooks/: useAuth.ts  useBots.ts  useMarketData.ts  useTrading.ts
frontend/pages/: LoginPage.tsx
frontend/types/: api.ts
frontend/utils/: api.ts
models/: __init__.py  bot.py  candle.py  indicator.py  order.py  signal.py  user.py
schemas/: auth.py  bot.py  market.py  order.py  signal.py
services/: audit.py  execution.py  indicators.py  market_data.py  scheduler.py
services/strategies/: base.py  blue_sky.py
